--- a/index.html
+++ b/index.html
@@ -178,20 +178,17 @@ Entry Test Accouncement (Graphic Designing & Video Editing/Animation Course) On 
 A-25,Bahadurabad Chowrangi Karachi,Pakistan<br><img src="phone.jpg"> UAN: 111-729-526 <img src="globe.jpg">(+0092-213)430786-90<br><img src="phone.jpg"> CELL: 92-311-1729526<br><img src="phone.jpg"> USA NO +1(716)941 7792<br><img src="phone.jpg"> UK NO (+44)115 970 6256<br><img src="msg.png"> info@saylaniwelfare.com</pre> </div>
 <!-- extra -->
 <div id="div4" class="col col-md-2 show"><pre>USEFUL LINKS<br><p><b>-----</b>------</p></pre></div>
-<div id="div5" class="col col-md-4 show"><pre>CONNECT WITH US</pre><br><br><br><img src="instra.jpg" id="twitter">
+<div id="div5" class="col col-md-4 show"><pre>CONNECT WITH US</pre><br><br><img src="instra.jpg" id="twitter">
   <img src="youtube.png"><img src="twitter.png"><img src="download.png"></div>
   <!-- extra -->
 <div id="div2" class="col col-md-2"><pre>USEFUL LINKS<br><p><b>-----</b>------</p></pre></div>
 <div id="div3" class="col col-md-4 "><pre>CONNECT WITH US</pre><br><br><br><img src="instra.jpg" id="twitter">
   <img src="youtube.png"><img src="twitter.png"><img src="download.png"></div>
 </div></div>
-
+</div>
 <footer><br>
   <small>Copyright © 2020 Saylani Welfare
 </small>
-</footer></div>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</footer>
 </body>
 </html>
